fixed MattAnything bug and minor updates

--- a/Matte_Anything/MatteAnything.ipynb
+++ b/Matte_Anything/MatteAnything.ipynb
@@ -3,6 +3,14 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/neuromorph/Matte-Anything/blob/main/MatteAnything.ipynb)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "clXthc2IBs3z"
       },
@@ -10,7 +18,7 @@
         "**Colab to run [Matte Anything](https://github.com/hustvl/Matte-Anything) demo**\n",
         "\n",
         "This notebook goes through setting up Matte Anything demo along with its dependencies.\n",
-        "In this [version](https://github.com/neuromorph/Matte-Anything), I have also added additional support for:\n",
+        "In [this version](https://github.com/neuromorph/Matte-Anything), I have also added additional support for:\n",
         "\n",
         "*   Use text input for foreground objects (along with text settings), instead of selecting points in image\n",
         "*   Change transparency settings to better tune for images with transparent objects\n",
