added drawing-to-image and image-to-image

--- a/image_anything.ipynb
+++ b/image_anything.ipynb
@@ -29,11 +29,13 @@
         "5. Inpainting\n",
         "6. Upscale image 4x\n",
         "7. Text to image\n",
+        "8. Drawing to image (Controlnet)\n",
+        "9. Image to image\n",
         "\n",
         "\n",
-        "Change runtime in Colab to use GPU.  \n",
+        "Change runtime in Colab to use GPU. If you try all the models at once in Colab, you may run into 'CUDA out of memory'; in that case, restart the app to clear memory and try next task. \n",
         "After running the gradio_app.py in the last step of this notebook, you'll get the shareable link of gradio where you can access the demo app.  \n",
-        "Upload an image, select task, provide prompts as per the task and click on Run button. Optionally, you can provide additional settings from the Advanced Options section."
+        "Upload an image, select task, provide prompts as per the task and click on Run button. Optionally, you can provide additional settings from the Advanced Settings section."
       ]
     },
     {
@@ -266,6 +268,15 @@
       "source": [
         "%cd /content/image-anything\n",
         "%pip install --upgrade diffusers[torch]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install controlnet_aux mediapipe"
       ]
     },
     {
